
	https://glassfish.dev.java.net/issues


		  CHANGES IN THE 1.4.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.3 release.

6850882	IMAPMessage returns wrong getMessageNumber() from messageRemovedEvent
6857090	JavaMail is not sending HELO / EHLO according to specs
6872072	QPEncoderStream write method eats up trailing white space of a string
<no id>	add starttls support to POP3
<no id>	fix deadlock in IMAP IDLE support
<no id>	add mail.transport.protocol.<address-type> property
<no id>	fail POP3Folder.open if STAT command fails
<no id>	fix POP3Folder.isOpen if POP3 server fails and is then reconnected
<no id>	better handle modifying messages created from input streams
<no id>	include server error message in exception when SMTP authentication fails
<no id>	InternetAddress verifies domain per RFC1034 instead of RFC822 in strict


		  CHANGES IN THE 1.4.2 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.2 release.

6621377	unexpected result when uuencode data has any line starting with
	"END" characters
6629213	base64 encoder sometimes omits CRLF
6670275	headers may not end up on top where they belong
6671855	list on IMAP folder that can contain both messages and folders
	might fail if folder is open
6672359	SMTPTransport notifying both partially delivered and
	not delivered methods
6676257	cannot specify two custom ssl socket factories for starttls usage
6679333	missing quotes around zero length parameter values
6720896	add mail.mime.uudecode.ignoreerrors system property
6720896	add mail.mime.uudecode.ignoremissingbeginend system property
6730637	deadlocks in IMAP provider when connections fail
6738454	deadlock when connection is broken
6738468	javadocs use fully qualified names
6797756	StringIndexOutOfBoundsError in InternetAddress.parseHeader()
6799810	getReplyTo() returns zero length array when ReplyTo hdr has no value
GF 3929	Inconsistent synchronization in com.sun.mail.iap.Protocol